Clean up and Polish of Testing Updates