@@ -29,7 +29,9 @@ import org.cloudfoundry.identity.uaa.scim.ScimUser;
 import org.cloudfoundry.identity.uaa.test.TestAccountExtension;
 import org.cloudfoundry.identity.uaa.test.UaaTestAccounts;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestMethodOrder;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
@@ -59,7 +61,8 @@ import static org.cloudfoundry.identity.uaa.constants.OriginKeys.LOGIN_SERVER;
  *
  * @author Dave Syer
  */
-public class LoginServerSecurityIntegrationTests {
+@TestMethodOrder(MethodOrderer.MethodName.class)
+class LoginServerSecurityIntegrationTests {
 
     private final String JOE = "joe" + new RandomValueStringGenerator().generate().toLowerCase();
     private final String loginServerJoe = "ls_joe" + new RandomValueStringGenerator().generate().toLowerCase();
@@ -71,10 +74,10 @@ public class LoginServerSecurityIntegrationTests {
     private static final UaaTestAccounts testAccounts = UaaTestAccounts.standard(serverRunning);
 
     @RegisterExtension
-    private static final TestAccountExtension testAccountSetup = TestAccountExtension.standard(serverRunning, testAccounts);
+    private static final TestAccountExtension testAccountExtension = TestAccountExtension.standard(serverRunning, testAccounts);
 
     @RegisterExtension
-    private static final OAuth2ContextExtension context = OAuth2ContextExtension.withTestAccounts(serverRunning, testAccountSetup);
+    private static final OAuth2ContextExtension context = OAuth2ContextExtension.withTestAccounts(serverRunning, testAccountExtension);
 
     private final MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
 
@@ -101,6 +104,7 @@ public class LoginServerSecurityIntegrationTests {
 
             @Override
             public void handleError(ClientHttpResponse response) {
+                // pass through
             }
         });
     }
@@ -145,7 +149,7 @@ public class LoginServerSecurityIntegrationTests {
 
         // The implicit grant for cf requires extra parameters in the
         // authorization request
-        context.setParameters(Collections.singletonMap("credentials",
+        context.setParameters(Map.of("credentials",
                 testAccounts.getJsonCredentials(joe.getUserName(), "Passwo3d")));
     }
 
@@ -171,7 +175,7 @@ public class LoginServerSecurityIntegrationTests {
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(response.getBody()).containsEntry("username", "marissa")
                 .containsEntry(OriginKeys.ORIGIN, OriginKeys.UAA);
-        assertThat(StringUtils.hasText((String) response.getBody().get("user_id"))).isTrue();
+        assertThat((String) response.getBody().get("user_id")).isNotEmpty();
     }
 
     @Test
@@ -184,7 +188,7 @@ public class LoginServerSecurityIntegrationTests {
     }
 
     @Test
-    void authenticateDoesNotReturnsUserID() {
+    void authenticateDoesNotReturnUserID() {
         params.set("username", testAccounts.getUserName());
         params.set("password", testAccounts.getPassword());
         ResponseEntity<Map> response = serverRunning.postForMap("/authenticate", params, headers);
@@ -423,29 +427,6 @@ public class LoginServerSecurityIntegrationTests {
         assertThat(statusCode == HttpStatus.FORBIDDEN || statusCode == HttpStatus.UNAUTHORIZED).as("Status code should be 401 or 403.").isTrue();
     }
 
-    @Test
-    @OAuth2ContextConfiguration(AppClient.class)
-    void loginServerCfInvalidClientToken() {
-        ImplicitResourceDetails resource = testAccounts.getDefaultImplicitResource();
-        headers.clear();
-        headers.add("Accept", MediaType.APPLICATION_JSON_VALUE);
-        params.set("client_id", resource.getClientId());
-        params.set("client_secret", "bogus");
-        params.set("source", "login");
-        params.set(UaaAuthenticationDetails.ADD_NEW, "false");
-        params.set("grant_type", "password");
-
-        String redirect = resource.getPreEstablishedRedirectUri();
-        if (redirect != null) {
-            params.set("redirect_uri", redirect);
-        }
-        @SuppressWarnings("rawtypes")
-        ResponseEntity<Map> response = serverRunning.postForMap(serverRunning.getAccessTokenUri(), params, headers);
-        HttpStatus statusCode = response.getStatusCode();
-
-        assertThat(statusCode == HttpStatus.FORBIDDEN || statusCode == HttpStatus.UNAUTHORIZED).as("Status code should be 401 or 403.").isTrue();
-    }
-
     private String getAuthorizationEncodedValue(String username, String password) {
         String auth = username + ":" + password;
         byte[] encodedAuth = Base64.encodeBase64(auth.getBytes(StandardCharsets.US_ASCII));
@@ -458,18 +439,6 @@ public class LoginServerSecurityIntegrationTests {
             LoginServerSecurityIntegrationTests test = (LoginServerSecurityIntegrationTests) target;
             ClientCredentialsResourceDetails resource = test.testAccounts.getClientCredentialsResource(
                     new String[]{"oauth.login"}, "login", "loginsecret");
-            setClientId(resource.getClientId());
-            setClientSecret(resource.getClientSecret());
-            setId(getClientId());
-            setAccessTokenUri(test.serverRunning.getAccessTokenUri());
-        }
-    }
-
-    private static class AppClient extends ClientCredentialsResourceDetails {
-        @SuppressWarnings("unused")
-        public AppClient(Object target) {
-            LoginServerSecurityIntegrationTests test = (LoginServerSecurityIntegrationTests) target;
-            ClientCredentialsResourceDetails resource = test.testAccounts.getClientCredentialsResource("app", "appclientsecret");
             setClientId(resource.getClientId());
             setClientSecret(resource.getClientSecret());
             setId(getClientId());
